<resources>
    <string name="app_name">Mathematics</string>
    <string name="course_name">Your Path Towards Success</string>
    <string name="my_name">The Hardest Question?</string>
    <string name="student_id">Calculate Sin-Cos-Tangent?</string>
    <string name="et_hints">PYTHAGORAS THEOREM</string>
    <string name="tv2">tv2</string>
    <string name="btn1">Steps to Solution</string>
    <string name="Java">Calculator</string>
    <string name="btn_next">Ask Mr.Google</string>
    <string name="btn_next_text">TRY NEXT GAME</string>
</resources>